# gep_tiago_pro_control_stack

./: README.md
odometry_gz_hw_interface/: CMakeLists.txt  package.xml  plugin_description.xml
odometry_gz_hw_interface/include/odometry_gz_hw_interface/: odometry_hardware.hpp
odometry_gz_hw_interface/src/: odometry_hardware.cpp
odometry_hardware_interface/: CMakeLists.txt  odometry_hardware_interface.xml  package.xml
odometry_hardware_interface/include/odometry_hardware_interface/: odometry_hardware.hpp
odometry_hardware_interface/src/: odometry_hardware.cpp
tiago_pro_lfc_bringup/: package.xml  setup.cfg  setup.py
tiago_pro_lfc_bringup/config/: pd_plus_controller_params.yaml
tiago_pro_lfc_bringup/config/fixed/: dummy_controllers.yaml  joint_state_estimator_params.yaml  linear_feedback_controller_params.yaml
tiago_pro_lfc_bringup/config/free_flyer/: dummy_controllers.yaml  joint_state_estimator_params.yaml  linear_feedback_controller_params.yaml
tiago_pro_lfc_bringup/launch/: pd_plus_controller.launch.py  switch_to_lfc_controllers.launch.py  tiago_pro_common.launch.py  tiago_pro_hardware.launch.py  tiago_pro_simulation.launch.py
tiago_pro_lfc_bringup/test/: test_copyright.py  test_flake8.py  test_pep247.py
