<?xml version="1.0"?>
<package format="3">
  <name>odometry_gz_hw_interface</name>
  <version>0.0.1</version>
  <description>Custom gz_ros2_control GazeboSimSystemInterface reading an Odometry topic.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>gz_ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
